--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+  <main role="main">
     <div class="card">
       <img src="images/image-qr-code.png" alt="scannable qr code">
       <div class="text">
@@ -19,10 +19,10 @@
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
       </div>
     </div> 
-  </div>
-  <div class="attribution text">
+  </main>
+  <footer role="contentinfo" class="attribution text">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/PastoreMartina" target="_blank">Martina Pastore</a>.
-  </div>
+  </footer>
 </body>
 </html>
