--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main role="main">
+  <main>
     <div class="card">
       <img src="images/image-qr-code.png" alt="scannable qr code">
       <div class="text">
@@ -20,7 +20,7 @@
       </div>
     </div> 
   </main>
-  <footer role="contentinfo" class="attribution text">
+  <footer class="attribution text">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/PastoreMartina" target="_blank">Martina Pastore</a>.
   </footer>
